# Copilot-RAG-API

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
faiss_db/: index.faiss  index.pkl
landingai_output/: pages_01-02.txt.txt  pages_03-04.txt.txt  pages_05-06.txt.txt  pages_07-08.txt.txt  pages_09-10.txt.txt  pages_11-12.txt.txt  pages_12-12.txt.txt  pages_13-14.txt.txt  pages_15-16.txt.txt  pages_15-16_1.txt.txt  pages_15-16_2.txt.txt  pages_15-16_3.txt.txt  pages_15-16_4.txt.txt  pages_15-16_5.txt.txt  pages_17-18.txt.txt  pages_17-18_1.txt.txt  pages_17-18_2.txt.txt  pages_17-18_3.txt.txt  pages_17-18_4.txt.txt  pages_17-18_5.txt.txt  pages_17-18_6.txt.txt  pages_17-18_7.txt.txt  pages_17-18_8.txt.txt  pages_19-20.txt.txt  pages_21-28.txt.txt  pages_29-32.txt.txt  pages_33-40.txt.txt  pages_41-48.txt.txt  pages_49-54.txt.txt  pages_55-60.txt.txt  pages_61-65.txt.txt  pages_65-66.txt.txt  pages_67-75.txt.txt  pages_75-76.txt.txt  pages_77-78.txt.txt  pages_79-80.txt.txt  pages_81-82.txt.txt
src/copilot_chatbot_rag_api/: db_builder.py  main.py
